# jukebox

./: CMakeLists.txt  compile_and_run_instructions.txt
data/: buzz-a  ilan-r  mae-j  songs.json  yuri-g
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/juke_box/: CMakeLists.txt
src/juke_box/include/: int_node.h  juke_box.h  list_node.h  node.h  rule_node.h  string_converter.h  terminal_node.h
src/juke_box/src/: juke_box.cpp  rule_node.cpp  terminal_node.cpp
src/some_lib/: CMakeLists.txt
src/some_lib/include/: file_parser.h  int_node.h  juke_box.h  list_node.h  node.h  nodes_container.h  rule_node.h  some_class.h  song.h  terminal_node.h
src/some_lib/src/: file_parser.cpp  int_node.cpp  juke_box.cpp  list_node.cpp  node.cpp  nodes_container.cpp  rule_node.cpp  some_class.cpp  song.cpp  terminal_node.cpp
tests/: CMakeLists.txt  juke_box_test.cpp
tests/trees/: example  neil-a  valentina-t  yang-l
